--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
   <div class="content">
     <p>We're working on something amazing. Stay tuned!</p>
     <p>Follow us on social media for updates:</p>
-    <a href="https://twitter.com/athdesigns">Twitter</a> |
-    <a href="https://www.instagram.com/athdesigns">Instagram</a> |
-    <a href="https://www.facebook.com/athdesigns">Facebook</a>
+    <a href="https://www.instagram.com/athdesigns.com.au">Instagram</a>
+    
   </div>
 </body>
 </html>
