--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section id="gallery">
         <h2>Our Work</h2>
-        <div id="instagram-feed"></div>
+        <div id="image-gallery"></div>
     </section>
 
     <section id="contact">
