--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AthDesigns offers custom jewellery designs tailored to your unique style. Discover our gallery and commission a personalized ring.">
     <title>AthDesigns</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
 </head>
+
 <body>
+
     <header>
         <nav>
             <div class="logo">
@@ -16,30 +20,35 @@
             </div>
             <div class="menu">
                 <a href="#gallery">Gallery</a>
-                <a href="#contact">Contact</a>
+                <a href="#contact-form">Contact</a>
                 <a href="enquiries.html">Commission a Ring</a>
             </div>
         </nav>
     </header>
 
-    <section id="intro">
-        <h2>Welcome to AthDesigns</h2>
-        <p>With our custom jewellery designs, we are dedicated to helping you express your unique style. Our intricate, personalized rings are crafted with precision and care, ensuring the perfect piece for any occasion.</p>
-    </section>
+    <main>
+        <section id="intro">
+            <h2>Welcome to AthDesigns</h2>
+            <p>With our custom jewellery designs, we are dedicated to helping you express your unique style. Our intricate, personalized rings are crafted with precision and care, ensuring the perfect piece for any occasion.</p>
+        </section>
 
-    <section id="gallery">
-        <h2>Our Work</h2>
-        <div id="image-gallery"></div>
-    </section>
+        <section id="gallery">
+            <h2>Our Work</h2>
+            <div id="image-gallery"></div>
+        </section>
 
-    <form action="mail.php" method="post">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-    </form>
+        <section id="contact-form">
+            <h2>Contact Us</h2>
+            <form action="mail.php" method="post">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+    </main>
 
-    
     <script src="main.js"></script>
 </body>
+
 </html>
